# x-cosmos-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLI_GUIDE.md  CODE_MAP.md  CONTRIBUTING.md  Dockerfile  FIXES_SUMMARY.md  FRONTEND_CAPABILITIES.md  GEMINI.md  MCP_SETUP_GUIDE.md  README.md  VERIFICATION_REPORT.md  api.py  arch  category_normalizer.py  cli.py  config.py  config.yaml  configure_ollama.sh  docker-compose.ollama.yml  docker-compose.postgres.yml  docker-compose.yml  docker-entrypoint.sh  healthcheck.py  main.py  mcp_pip.py  migrate_sqlite_to_postgres.py  migrate_to_postgres.py  migrations.sql  optimus_v3.py  p.json  package.json  pipeline.py  pipeline_worker.py  pnpm-lock.yaml  pnpm-workspace.yaml  prompt.md  pyproject.toml  (+6 more)
.gemini/: settings.json
.marscode/: deviceInfo.json
app/: api.py  config.py  main.py  mcp_pip.py  models.py  pipeline.py  pipeline_worker.py  websocket.py  worker_pool.py  worker_task.py
docs/: API.md  CODE_MAP.md  CONTRIBUTING.md  DATABASE.md  FRONTEND.md  GEMINI_MCP_GUIDE.md  PRODUCTION_READINESS.md  PRODUCTS_BY_ID_JSON_ANALYZER.md  SETUP.md  USAGE.md
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend.old/: Dockerfile  next.config.js  next.config.ts  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js
migrations/: 001_add_normalized_columns.sql
prompts/: normalize_product.j2
scripts/: alter_v3.schema.sql  analyze_json_keys.py  configure_ollama.sh  export_sqlite_to_json.py  extract_data.py  get_product_structure.sh  healthcheck.py  import_to_postgres.sh  mcp_server.py  sample_product.json  schema.sql  supabase.schema.sql  utils.py  (+2 more)
(+135 files in other folders)
