[tool.poetry]
name = "mcp-openai"
version = "0.1.0"
description = "MCP/LLM workflow to rewrite and categorize products from a sqlite database."
authors = ["Moughamir Mohamed <moughamir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "*"
Jinja2 = "*"
fastapi = "*"
uvicorn = "*"
aiofiles = "*"
python-multipart = "*"
sqlite-utils = "*"
ruff = "*"
aiosqlite = "*"
pydantic-settings = "*"
ollama = "*"
httpx = "*"
requests = "*"
beautifulsoup4 = "*"
aiohttp = "*"
tiktoken = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"